[Add]: icon [Add]: lazy loading

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       </div>
       <div class="menu">
         <div>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+          <svg
+            class="header__menu-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 50 50"
+          >
             <defs />
             <circle
               cx="25"
